--- a/requirements.txt
+++ b/requirements.txt
@@ -78,7 +78,7 @@ nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook_shim==0.2.4
-numpy==2.2.2
+numpy==1.26.4
 openai==1.82.0
 orjson==3.10.18
 overrides==7.7.0
@@ -123,6 +123,7 @@ scikit-learn==1.6.1
 scipy==1.15.1
 seaborn==0.13.2
 Send2Trash==1.8.3
+sentence-transformers>=2.6.1
 setuptools==80.8.0
 six==1.17.0
 sniffio==1.3.1
@@ -133,6 +134,7 @@ tenacity==9.1.2
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
+torch==2.2.2
 tornado==6.5.1
 tqdm==4.67.1
 traitlets==5.14.3
