--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,6 @@ httpx==0.28.1
 huggingface-hub==0.32.0
 idna==3.10
 ipykernel==6.29.5
-ipython==9.2.0
 ipython_pygments_lexers==1.1.1
 isoduration==20.11.0
 jedi==0.19.2
@@ -54,15 +53,8 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
+jupyter
+jupyterlab
 kiwisolver==1.4.8
 langchain==0.3.25
 langchain-core==0.3.61
@@ -134,7 +126,6 @@ tenacity==9.1.2
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
-torch==2.2.2
 tornado==6.5.1
 tqdm==4.67.1
 traitlets==5.14.3
