--- a/requirements.txt
+++ b/requirements.txt
@@ -103,6 +103,7 @@ python-json-logger==3.3.0
 pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
+rapidfuzz
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
